--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-av": "~10.1.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "moti": "^0.17.1",
@@ -38,9 +39,11 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-shared-element": "0.8.2",
     "react-native-size-matters": "^0.4.0",
+    "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-svg": "12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-touchable-scale": "*",
+    "react-native-video": "^5.2.0",
     "react-native-web": "0.17.1",
     "react-navigation": "4.1.1",
     "react-navigation-shared-element": "^3.1.3",
