--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "axios": "^0.26.0",
     "expo": "~43.0.2",
     "expo-av": "~10.1.3",
     "expo-linear-gradient": "~10.0.3",
@@ -47,7 +48,8 @@
     "react-native-web": "0.17.1",
     "react-navigation": "4.1.1",
     "react-navigation-shared-element": "^3.1.3",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-query": "^3.34.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
