--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.26.0",
     "expo": "~43.0.2",
     "expo-av": "~10.1.3",
+    "expo-blur": "~10.0.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "moti": "^0.17.1",
